--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.6.2",
-    "@types/material-ui": "^0.21.5",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-slick": "^0.23.3",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.4.0",
+    "react-slick": "^0.23.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
